--- a/APIGateway_AM200230/APIGateway_AM200230.csproj
+++ b/APIGateway_AM200230/APIGateway_AM200230.csproj
@@ -6,4 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibroAPI\LibroAPI.csproj" />
+    <ProjectReference Include="..\ProductoAPI\ProductoAPI.csproj" />
+  </ItemGroup>
+
 </Project>
